libpurple/wrapper/Account.cs


		public static string GetBuddyIconPath(PurpleAccount account)
		{
			return purple_account_get_buddy_icon_path(account.Reference);
		}

		/*
		 * char * purple_account_get_protocol_id(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_account_get_protocol_id(IntPtr account);

		public static string GetProtocolId(PurpleAccount account)
		{
			return purple_account_get_protocol_id(account.Reference);
		}

		/*
		 * char * purple_account_get_protocol_name(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_account_get_protocol_name(IntPtr account);

		public static string GetProtocolName(PurpleAccount account)
		{
			return purple_account_get_protocol_name(account.Reference);
		}

		/*
		 * PurpleConnection * purple_account_get_connection(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_account_get_connection(IntPtr account);

		public static PurpleConnection GetConnection(PurpleAccount account)
		{
			return new PurpleConnection(purple_account_get_connection(account.Reference));
		}

		/*
		 * gboolean purple_account_get_remember_password(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_account_get_remember_password(IntPtr account);

		public static bool GetRememberPassword(PurpleAccount account)
		{
			return purple_account_get_remember_password(account.Reference);
		}

		/*
		 * gboolean purple_account_get_check_mail(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_account_get_check_mail(IntPtr account);

		public static bool GetCheckMail(PurpleAccount account)
		{
			return purple_account_get_check_mail(account.Reference);
		}

		/*
		 * PurpleProxyInfo * purple_account_get_proxy_info(PurpleAccount * account)
		 * 
		 * Could not generate a wrapper for purple_account_get_proxy_info in file "account.h".
		 * Message: The type could not be resolved (PurpleProxyInfo * purple_account_get_proxy_info(PurpleAccount * account)).
		 */

		/*
		 * PurpleStatus * purple_account_get_active_status(PurpleAccount * account)
		 * 
		 * Could not generate a wrapper for purple_account_get_active_status in file "account.h".
		 * Message: The type could not be resolved (PurpleStatus * purple_account_get_active_status(PurpleAccount * account)).
		 */

		/*
		 * PurplePresence * purple_account_get_presence(PurpleAccount * account)
		 * 
		 * Could not generate a wrapper for purple_account_get_presence in file "account.h".
		 * Message: The type could not be resolved (PurplePresence * purple_account_get_presence(PurpleAccount * account)).
		 */

		/*
		 * GList * purple_account_get_status_types(PurpleAccount * account)
		 * 
		 * Could not generate a wrapper for purple_account_get_status_types in file "account.h".
		 * Message: The type could not be resolved (GList * purple_account_get_status_types(PurpleAccount * account)).
		 */

		/*
		 * PurpleLog * purple_account_get_log(PurpleAccount * account, gboolean create)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_account_get_log(IntPtr account, bool create);

		public static PurpleLog GetLog(PurpleAccount account, bool create)
		{
			return new PurpleLog(purple_account_get_log(account.Reference, create));
		}

		/*
		 * void purple_account_destroy_log(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_destroy_log(IntPtr account);

		public static void DestroyLog(PurpleAccount account)
		{
			purple_account_destroy_log(account.Reference);
		}

		/*
		 * void purple_account_add_buddy(PurpleAccount * account, PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_add_buddy(IntPtr account, IntPtr buddy);

		public static void AddBuddy(PurpleAccount account, PurpleBuddy buddy)
		{
			purple_account_add_buddy(account.Reference, buddy.Reference);
		}

		/*
		 * void purple_account_add_buddies(PurpleAccount * account, GList * buddies)
		 * 
		 * Could not generate a wrapper for purple_account_add_buddies in file "account.h".
		 * Message: The type could not be resolved (GList * buddies).
		 */

		/*
		 * void purple_account_remove_group(PurpleAccount * account, PurpleGroup * group)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_remove_group(IntPtr account, IntPtr group);

		public static void RemoveGroup(PurpleAccount account, PurpleGroup group)
		{
			purple_account_remove_group(account.Reference, group.Reference);
		}

		/*
		 * gboolean purple_account_supports_offline_message(PurpleAccount * account, PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_account_supports_offline_message(IntPtr account, IntPtr buddy);

		public static bool SupportsOfflineMessage(PurpleAccount account, PurpleBuddy buddy)
		{
			return purple_account_supports_offline_message(account.Reference, buddy.Reference);
		}

		/*
		 * PurpleConnectionErrorInfo * purple_account_get_current_error(PurpleAccount * account)
		 * 
		 * Could not generate a wrapper for purple_account_get_current_error in file "account.h".
		 * Message: The type could not be resolved (PurpleConnectionErrorInfo * purple_account_get_current_error(PurpleAccount * account)).
		 */

		/*
		 * void purple_account_clear_current_error(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_account_clear_current_error(IntPtr account);

		public static void ClearCurrentError(PurpleAccount account)
		{
			purple_account_clear_current_error(account.Reference);
		}

		/*
		 * void purple_accounts_add(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_add(IntPtr account);

		public static void AccountsAdd(PurpleAccount account)
		{
			purple_accounts_add(account.Reference);
		}

		/*
		 * void purple_accounts_remove(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_remove(IntPtr account);

		public static void AccountsRemove(PurpleAccount account)
		{
			purple_accounts_remove(account.Reference);
		}

		/*
		 * void purple_accounts_delete(PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_delete(IntPtr account);

		public static void AccountsDelete(PurpleAccount account)
		{
			purple_accounts_delete(account.Reference);
		}

		/*
		 * void purple_accounts_reorder(PurpleAccount * account, gint new_index)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_reorder(IntPtr account, int new_index);

		public static void AccountsReorder(PurpleAccount account, int new_index)
		{
			purple_accounts_reorder(account.Reference, new_index);
		}

		/*
		 * GList * purple_accounts_get_all()
		 * 
		 * Could not generate a wrapper for purple_accounts_get_all in file "account.h".
		 * Message: The type could not be resolved (GList * purple_accounts_get_all()).
		 */

		/*
		 * GList * purple_accounts_get_all_active()
		 * 
		 * Could not generate a wrapper for purple_accounts_get_all_active in file "account.h".
		 * Message: The type could not be resolved (GList * purple_accounts_get_all_active()).
		 */

		/*
		 * PurpleAccount * purple_accounts_find(char * name, char * protocol)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_accounts_find(string name, string protocol);

		public static PurpleAccount AccountsFind(string name, string protocol)
		{
			return new PurpleAccount(purple_accounts_find(name, protocol));
		}

		/*
		 * void purple_accounts_restore_current_statuses()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_restore_current_statuses();

		public static void AccountsRestoreCurrentStatuses()
		{
			purple_accounts_restore_current_statuses();
		}

		/*
		 * void purple_accounts_set_ui_ops(PurpleAccountUiOps * ops)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_set_ui_ops(IntPtr ops);

		public static void AccountsSetUiOps(PurpleAccountUiOps ops)
		{
			purple_accounts_set_ui_ops(ops.Reference);
		}

		/*
		 * PurpleAccountUiOps * purple_accounts_get_ui_ops()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_accounts_get_ui_ops();

		public static PurpleAccountUiOps AccountsGetUiOps()
		{
			return new PurpleAccountUiOps(purple_accounts_get_ui_ops());
		}

		/*
		 * void * purple_accounts_get_handle()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_accounts_get_handle();

		public static IntPtr AccountsGetHandle()
		{
			return purple_accounts_get_handle();
		}

		/*
		 * void purple_accounts_init()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_init();

		public static void AccountsInit()
		{
			purple_accounts_init();
		}

		/*
		 * void purple_accounts_uninit()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_accounts_uninit();

		public static void AccountsUninit()
		{
			purple_accounts_uninit();
		}

	}
}

